--- a/chat.html
+++ b/chat.html
@@ -15,28 +15,22 @@
   --color-primary: #4CAF50;
   --color-primary-hover: #45a049;
 }
-
-/* RESET */
-* { box-sizing: border-box; margin:0; padding:0; }
-html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
-
-/* HEADER */
-header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
+* { box-sizing:border-box; margin:0; padding:0; }
+html,body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light);}
+header { background:#fff; padding:10px; border-bottom:1px solid #ddd; display:flex; align-items:center; gap:8px; z-index:100;}
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
-/* TOPBAR */
 #topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
+#topBar #deleteChatBtn { margin-left:auto; }
 
-/* MOBILE USERS HORIZONTAL */
 #mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
-/* BOLINHA DE NOTIFICAÇÃO PISCANTE */
 .notify-dot {
   position:absolute;
   top:2px;
@@ -48,60 +42,35 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
   animation: blink 1s infinite;
   display:none;
 }
-@keyframes blink {
-  0% { opacity:1; }
-  50% { opacity:0; }
-  100% { opacity:1; }
-}
+@keyframes blink { 0% { opacity:1; } 50% { opacity:0; } 100% { opacity:1; } }
 
-/* MAIN */
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
-/* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
-/* CHAT */
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
-/* CHAT INPUT */
 #chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
 #chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
 #chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
 #chatInput button:hover { background:var(--color-primary-hover); }
-#deleteChatBtn { background:red; color:white; }
 
-/* ADS */
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
-
-/* FOOTER */
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
-/* MOBILE */
 @media(max-width:768px){
-  html, body { height:100%; overflow:visible; }
+  html,body { height:100%; overflow:visible; }
   header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
   #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
-  #mobileUserLine {
-    display:flex;
-    position:fixed;
-    top:90px;
-    left:0;
-    right:0;
-    padding:6px 4px;
-    background:#fafafa;
-    border-bottom:1px solid #ddd;
-    z-index:100;
-    overflow-x:auto;
-    white-space:nowrap;
-  }
-  #mainContent { flex-direction:column; margin-top: 130px; margin-bottom: 100px; height: auto; overflow-y:auto; }
+  #mobileUserLine { display:flex; position:fixed; top:90px; left:0; right:0; padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd; z-index:100; overflow-x:auto; white-space:nowrap; }
+  #mainContent { flex-direction:column; margin-top: 130px; margin-bottom: 100px; height:auto; overflow-y:auto; }
   #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
   footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
   #userList, #adSidebar { display:none; }
@@ -118,6 +87,7 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <button id="loginBtn">Login com Google</button>
   <button id="logoutBtn" style="display:none;">Logout</button>
   <button id="generalBtn" style="display:none;">⬅ Bate-papo geral</button>
+  <button id="deleteChatBtn" style="display:none;">🗑️ Apagar Chat</button>
   <span id="alertaLogin">⚠️ Faça login para enviar mensagens.</span>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
@@ -131,7 +101,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
     <div id="chatInput">
       <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
       <button id="sendBtn" disabled>Enviar</button>
-      <button id="deleteChatBtn">Apagar Chat</button>
     </div>
   </div>
   <div id="adSidebar">Publicidade aqui (Adsense)</div>
@@ -164,8 +133,8 @@ const userList=document.getElementById("userList");
 const alertaLogin=document.getElementById("alertaLogin");
 const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
-const mobileUserLine=document.getElementById("mobileUserLine");
 const deleteChatBtn=document.getElementById("deleteChatBtn");
+const mobileUserLine=document.getElementById("mobileUserLine");
 const msgSound=document.getElementById("msgSound");
 
 let currentChat="global";
@@ -182,26 +151,24 @@ auth.onAuthStateChanged(user=>{
     alertaLogin.style.display="none";
     msgInput.disabled=false;
     sendBtn.disabled=false;
-    deleteChatBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
-  } else {
+  }else{
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
     alertaLogin.style.display="inline-block";
     msgInput.disabled=true;
     sendBtn.disabled=true;
-    deleteChatBtn.disabled=true;
   }
 });
 
-// LISTA DE USUÁRIOS
+// LISTA USUÁRIOS
 db.ref("online").on("value",snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 ${Object.keys(users).length}`;
-  userList.innerHTML="";
-  mobileUserLine.innerHTML="";
+  userList.innerHTML=""; mobileUserLine.innerHTML="";
   for(const [uid,u] of Object.entries(users)){
+    if(!u.photo) u.photo='https://cdn-icons-png.flaticon.com/512/847/847969.png';
     const div=document.createElement("div");
     div.className="userItem";
     div.innerHTML=`<img src="${u.photo}"><span>${u.name}</span><div class='notify-dot'></div>`;
@@ -220,51 +187,32 @@ db.ref("online").on("value",snap=>{
 // ENVIAR MENSAGEM
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
-
 function sendMessage(){
   const text=msgInput.value.trim();
   const user=auth.currentUser;
-  if(!text||!user) return;
+  if(!text||!user)return;
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
   db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
   msgInput.value="";
 }
 
-// APAGAR CHAT
-deleteChatBtn.onclick=()=>{
-  if(currentChat==="global"){
-    if(confirm("Deseja apagar todo o chat global?")){
-      db.ref("chatGlobal").remove();
-      chatWindow.innerHTML="";
-    }
-  } else {
-    if(confirm("Deseja apagar este chat privado?")){
-      db.ref("private/"+currentChat).remove();
-      db.ref("privateStatus/"+currentChat).remove();
-      chatWindow.innerHTML="<div style='text-align:center;color:red;'>Chat apagado.</div>";
-      unreadMap[currentChat]=false;
-    }
-  }
-};
-
 // CHAT GLOBAL
 db.ref("chatGlobal").on("child_added",snap=>{
   const msg=snap.val();
   showMessage(msg,"chatGlobal");
-  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global"){
-    playNotification();
-    alert("Nova mensagem no chat global!");
-  }
+  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") playNotification();
 });
 
 // ABRIR CHAT PRIVADO
 function openPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
+
   const chatId=[uid,auth.currentUser.uid].sort().join("_");
   currentChat=chatId;
   chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
   generalBtn.style.display="inline-block";
+  deleteChatBtn.style.display="inline-block";
 
   // Marca mensagens como lidas
   if(unreadMap[chatId]){
@@ -272,32 +220,25 @@ function openPrivateChat(uid,name){
     updateNotifyDot(uid,false);
   }
 
-  // Verifica status de aceitação
   db.ref("privateStatus/"+chatId).once("value").then(s=>{
     const st=s.val();
-    if(st && st.rejected){
-      chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Esta conversa foi recusada.</div>";
-      return;
-    }
-    if(!st || (!st.accepted && st.waiting)){
+    if(!st || (!st.accepted && !st.rejected)){
       showAcceptancePrompt(chatId,name);
-    } else {
+    } else if(st.accepted){
       startChatListener(chatId);
+    } else {
+      chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Conversa recusada.</div>";
     }
   });
 }
 
-// MOSTRA PERGUNTA ACEITAR/RECUSAR
+// ACEITAR / RECUSAR
 function showAcceptancePrompt(chatId,name){
-  chatWindow.innerHTML=`
-    <div style='text-align:center;margin-top:20px;'>
-      ${name} enviou uma mensagem. Deseja aceitar o chat?<br><br>
-      <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
-      <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
-    </div>`;
+  chatWindow.innerHTML=`<div style='text-align:center;margin-top:20px;'>${name} enviou uma mensagem.<br><br>
+    <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
+    <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
+  </div>`;
 }
-
-// ACEITAR / RECUSAR CHAT
 function acceptChat(chatId){
   db.ref("privateStatus/"+chatId).set({accepted:true});
   startChatListener(chatId);
@@ -307,15 +248,13 @@ function rejectChat(chatId){
   chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
 }
 
-// MONITORA CHAT PRIVADO
+// CHAT PRIVADO
 function startChatListener(chatId){
   db.ref("private/"+chatId).off();
   db.ref("private/"+chatId).on("child_added",s=>{
-    const msg=s.val();
-    showMessage(msg,chatId);
-    if(msg.user!==auth.currentUser.displayName && currentChat!==chatId){
+    showMessage(s.val(),chatId);
+    if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
       playNotification();
-      alert("Nova mensagem de "+msg.user);
       unreadMap[chatId]=true;
       const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
       updateNotifyDot(uidOther,true);
@@ -323,8 +262,9 @@ function startChatListener(chatId){
   });
 }
 
+// MOSTRAR MENSAGEM
 function showMessage(msg,room){
-  if(room!=="chatGlobal" && room!==currentChat) return;
+  if(room!=="chatGlobal" && room!==currentChat)return;
   const div=document.createElement("div");
   div.className=msg.user===auth.currentUser?.displayName?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
@@ -332,13 +272,13 @@ function showMessage(msg,room){
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// NOTIFICAÇÃO
+// ALERTA
 function playNotification(){
-  msgSound.currentTime=0;
-  msgSound.play();
+  msgSound.currentTime=0; msgSound.play();
+  alert("Você recebeu uma nova mensagem!");
 }
 
-// Atualiza bolinha vermelha
+// BOLINHA NOTIFICAÇÃO
 function updateNotifyDot(uid,show){
   const items=[...document.querySelectorAll(".userItem"),...document.querySelectorAll(".userItemMobile")];
   for(const el of items){
@@ -348,15 +288,30 @@ function updateNotifyDot(uid,show){
   }
 }
 
+// APAGAR CHAT
+deleteChatBtn.onclick=()=>{
+  if(currentChat==="global"){
+    if(confirm("Deseja limpar o chat global apenas para você?")){
+      chatWindow.innerHTML="";
+    }
+  } else {
+    if(confirm("Deseja apagar este chat privado apenas para você?")){
+      chatWindow.innerHTML="";
+      db.ref("private/"+currentChat+"/"+auth.currentUser.uid).remove();
+    }
+  }
+};
+
 // VOLTAR CHAT GERAL
 generalBtn.onclick=()=>{
   currentChat="global";
   chatWindow.innerHTML="";
   db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
   generalBtn.style.display="none";
+  deleteChatBtn.style.display="none";
 };
 
-// SCROLL AUTOMÁTICO MOBILE
+// SCROLL MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
