--- a/chat.html
+++ b/chat.html
@@ -51,7 +51,7 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; }
-#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
+#chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; scroll-behavior:smooth; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
@@ -68,12 +68,21 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   position:fixed; bottom:60px; right:10px; background:#4CAF50; color:white; padding:10px 15px; border-radius:5px; box-shadow:0 2px 6px rgba(0,0,0,0.3); display:none; z-index:200;
 }
 
+/* Ícone global fixo */
+#globalIcon {
+  position:fixed; bottom:90px; left:10px; background:white; border:2px solid var(--color-primary);
+  width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center;
+  cursor:pointer; z-index:300; box-shadow:0 2px 5px rgba(0,0,0,0.2);
+}
+#globalIcon .notify-dot { top:4px; right:4px; }
+
 @media(max-width:768px){
   html,body { height:100%; overflow:visible; }
   header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
   #topBar { position:fixed; top:50px; left:0; right:0; z-index:100; width:100%; height:40px; }
   #mobileUserLine { display:flex; position:fixed; top:90px; left:0; right:0; padding:6px 4px; background:#fafafa; border-bottom:1px solid #ddd; z-index:100; overflow-x:auto; white-space:nowrap; }
-  #mainContent { flex-direction:column; margin-top: 130px; margin-bottom: 100px; height:auto; overflow-y:auto; }
+  #mainContent { flex-direction:column; margin-top:130px; margin-bottom:100px; height:auto; overflow-y:auto; }
+  #chatWindow { padding-bottom:80px; }
   #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
   footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
   #userList, #adSidebar { display:none; }
@@ -95,6 +104,7 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 </div>
 
 <div id="mobileUserLine"></div>
+
 <div id="mainContent">
   <div id="userList"></div>
   <div id="chatContainer">
@@ -107,9 +117,14 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <div id="adSidebar">Publicidade aqui (Adsense)</div>
 </div>
 
+<!-- Ícone do chat global -->
+<div id="globalIcon" title="Bate-papo global 🌍">
+  🌍
+  <div class="notify-dot" id="globalNotify"></div>
+</div>
+
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 <div id="toast"></div>
-
 <audio id="msgSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_2a8c4e8d5a.mp3?filename=message-pop-alert-23584.mp3" preload="auto"></audio>
 
 <script>
@@ -138,6 +153,8 @@ const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
 const msgSound=document.getElementById("msgSound");
 const toast=document.getElementById("toast");
+const globalIcon=document.getElementById("globalIcon");
+const globalNotify=document.getElementById("globalNotify");
 
 let currentChat="global";
 let unreadMap={};
@@ -167,7 +184,7 @@ auth.onAuthStateChanged(user=>{
 // LISTA USUÁRIOS
 db.ref("online").on("value",snap=>{
   const users=snap.val()||{};
-  onlineCount.textContent=`👥 ${Object.keys(users).length}`;
+  onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
   userList.innerHTML=""; mobileUserLine.innerHTML="";
   for(const [uid,u] of Object.entries(users)){
     if(!u.photo) u.photo='https://cdn-icons-png.flaticon.com/512/847/847969.png';
@@ -202,50 +219,34 @@ function sendMessage(){
 db.ref("chatGlobal").on("child_added",snap=>{
   const msg=snap.val();
   showMessage(msg,"chatGlobal");
-  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global") showToast("Nova mensagem no chat global!");
+  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global"){
+    globalNotify.style.display="block";
+    showToast("🌍 Nova mensagem no chat global!");
+  }
 });
+
+// ÍCONE GLOBAL CLICK
+globalIcon.onclick=()=>{
+  globalNotify.style.display="none";
+  currentChat="global";
+  chatWindow.innerHTML="";
+  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
+  generalBtn.style.display="none";
+};
 
 // ABRIR CHAT PRIVADO
 function openPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
-
   const chatId=[uid,auth.currentUser.uid].sort().join("_");
   currentChat=chatId;
   chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
   generalBtn.style.display="inline-block";
-
   if(unreadMap[chatId]){
     unreadMap[chatId]=false;
     updateNotifyDot(uid,false);
   }
-
-  db.ref("privateStatus/"+chatId).once("value").then(s=>{
-    const st=s.val();
-    if(!st || (!st.accepted && !st.rejected)){
-      showAcceptancePrompt(chatId,name);
-    } else if(st.accepted){
-      startChatListener(chatId);
-    } else {
-      chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Conversa recusada.</div>";
-    }
-  });
-}
-
-// ACEITAR / RECUSAR
-function showAcceptancePrompt(chatId,name){
-  chatWindow.innerHTML=`<div style='text-align:center;margin-top:20px;'>${name} enviou uma mensagem.<br><br>
-    <button onclick="acceptChat('${chatId}')">✅ Aceitar</button>
-    <button onclick="rejectChat('${chatId}')">❌ Recusar</button>
-  </div>`;
-}
-function acceptChat(chatId){
-  db.ref("privateStatus/"+chatId).set({accepted:true});
   startChatListener(chatId);
-}
-function rejectChat(chatId){
-  db.ref("privateStatus/"+chatId).set({rejected:true});
-  chatWindow.innerHTML="<div style='text-align:center;color:red;'>❌ Você recusou esta conversa.</div>";
 }
 
 // CHAT PRIVADO
@@ -255,9 +256,8 @@ function startChatListener(chatId){
     showMessage(s.val(),chatId);
     if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
       unreadMap[chatId]=true;
-      const uidOther=chatId.replace(auth.currentUser.uid,"").replace("_","");
-      updateNotifyDot(uidOther,true);
-      showToast("Nova mensagem de "+s.val().user);
+      showToast("💬 Nova mensagem de "+s.val().user);
+      msgSound.play();
     }
   });
 }
@@ -279,29 +279,12 @@ function showToast(msg){
   setTimeout(()=>{toast.style.display="none";},3000);
 }
 
-// BOLINHA NOTIFICAÇÃO
-function updateNotifyDot(uid,show){
-  const items=[...document.querySelectorAll(".userItem"),...document.querySelectorAll(".userItemMobile")];
-  for(const el of items){
-    const dot=el.querySelector(".notify-dot");
-    if(dot) dot.style.display=show?"block":"none";
-  }
-}
-
-// VOLTAR CHAT GERAL
-generalBtn.onclick=()=>{
-  currentChat="global";
-  chatWindow.innerHTML="";
-  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
-  generalBtn.style.display="none";
-};
-
 // SCROLL MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
   const container=mobileUserLine;
-  if(!container) return;
+  if(!container)return;
   scrollInterval=setInterval(()=>{
     container.scrollLeft+=1;
     if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
