--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>чат 🌍</title>
 
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -26,25 +27,21 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
 #mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
-.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
+.userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
-.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+.userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.05); }
 
 .notify-dot {
   position:absolute;
-  top:2px;
-  right:2px;
-  width:10px;
-  height:10px;
-  background:red;
-  border-radius:50%;
+  top:2px; right:2px;
+  width:10px; height:10px;
+  background:red; border-radius:50%;
   animation: blink 1s infinite;
   display:none;
 }
-@keyframes blink { 0% { opacity:1; } 50% { opacity:0; } 100% { opacity:1; } }
+@keyframes blink { 0%{opacity:1;} 50%{opacity:0;} 100%{opacity:1;} }
 
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
-
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
@@ -65,14 +62,19 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
 #toast {
-  position:fixed; bottom:60px; right:10px; background:#4CAF50; color:white; padding:10px 15px; border-radius:5px; box-shadow:0 2px 6px rgba(0,0,0,0.3); display:none; z-index:200;
+  position:fixed; bottom:60px; right:10px;
+  background:#4CAF50; color:white;
+  padding:10px 15px; border-radius:5px;
+  box-shadow:0 2px 6px rgba(0,0,0,0.3);
+  display:none; z-index:200;
 }
 
-/* Ícone global fixo */
 #globalIcon {
-  position:fixed; bottom:90px; left:10px; background:white; border:2px solid var(--color-primary);
-  width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center;
-  cursor:pointer; z-index:300; box-shadow:0 2px 5px rgba(0,0,0,0.2);
+  position:fixed; bottom:90px; left:10px;
+  background:white; border:2px solid var(--color-primary);
+  width:45px; height:45px; border-radius:50%;
+  display:flex; align-items:center; justify-content:center;
+  cursor:pointer; z-index:300;
 }
 #globalIcon .notify-dot { top:4px; right:4px; }
 
@@ -117,7 +119,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <div id="adSidebar">Publicidade aqui (Adsense)</div>
 </div>
 
-<!-- Ícone do chat global -->
 <div id="globalIcon" title="Bate-papo global 🌍">
   🌍
   <div class="notify-dot" id="globalNotify"></div>
@@ -141,8 +142,6 @@ firebase.initializeApp(firebaseConfig);
 
 const auth=firebase.auth();
 const db=firebase.database();
-const loginBtn=document.getElementById("loginBtn");
-const logoutBtn=document.getElementById("logoutBtn");
 const msgInput=document.getElementById("msgInput");
 const sendBtn=document.getElementById("sendBtn");
 const chatWindow=document.getElementById("chatWindow");
@@ -155,11 +154,12 @@ const msgSound=document.getElementById("msgSound");
 const toast=document.getElementById("toast");
 const globalIcon=document.getElementById("globalIcon");
 const globalNotify=document.getElementById("globalNotify");
+const loginBtn=document.getElementById("loginBtn");
+const logoutBtn=document.getElementById("logoutBtn");
 
 let currentChat="global";
 let unreadMap={};
 
-// LOGIN
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -168,20 +168,17 @@ auth.onAuthStateChanged(user=>{
     loginBtn.style.display="none";
     logoutBtn.style.display="inline-block";
     alertaLogin.style.display="none";
-    msgInput.disabled=false;
-    sendBtn.disabled=false;
+    msgInput.disabled=false; sendBtn.disabled=false;
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
   }else{
     loginBtn.style.display="inline-block";
     logoutBtn.style.display="none";
     alertaLogin.style.display="inline-block";
-    msgInput.disabled=true;
-    sendBtn.disabled=true;
+    msgInput.disabled=true; sendBtn.disabled=true;
   }
 });
 
-// LISTA USUÁRIOS
 db.ref("online").on("value",snap=>{
   const users=snap.val()||{};
   onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
@@ -200,10 +197,8 @@ db.ref("online").on("value",snap=>{
     mob.onclick=()=>openPrivateChat(uid,u.name);
     mobileUserLine.appendChild(mob);
   }
-  startMobileScroll();
 });
 
-// ENVIAR MENSAGEM
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 function sendMessage(){
@@ -211,30 +206,29 @@ function sendMessage(){
   const user=auth.currentUser;
   if(!text||!user)return;
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
+  db.ref(path).push({user:user.displayName,uid:user.uid,text,timestamp:Date.now(),seenBy:{[user.uid]:true}});
   msgInput.value="";
 }
 
-// CHAT GLOBAL
 db.ref("chatGlobal").on("child_added",snap=>{
   const msg=snap.val();
   showMessage(msg,"chatGlobal");
-  if(msg.user!==auth.currentUser?.displayName && currentChat!=="global"){
-    globalNotify.style.display="block";
+  if(msg.uid!==auth.currentUser?.uid && currentChat!=="global"){
     showToast("🌍 Nova mensagem no chat global!");
+    msgSound.play();
+    globalNotify.style.display="block";
   }
 });
 
-// ÍCONE GLOBAL CLICK
-globalIcon.onclick=()=>{
-  globalNotify.style.display="none";
-  currentChat="global";
-  chatWindow.innerHTML="";
+globalIcon.onclick=()=>{globalNotify.style.display="none";openGlobalChat();};
+generalBtn.onclick=openGlobalChat;
+
+function openGlobalChat(){
+  currentChat="global"; chatWindow.innerHTML="";
   db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
   generalBtn.style.display="none";
-};
+}
 
-// ABRIR CHAT PRIVADO
 function openPrivateChat(uid,name){
   if(!auth.currentUser) return alert("Faça login para conversar.");
   if(uid===auth.currentUser.uid) return;
@@ -242,53 +236,51 @@ function openPrivateChat(uid,name){
   currentChat=chatId;
   chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
   generalBtn.style.display="inline-block";
-  if(unreadMap[chatId]){
-    unreadMap[chatId]=false;
-    updateNotifyDot(uid,false);
-  }
-  startChatListener(chatId);
+  unreadMap[chatId]=false;
+  updateNotifyDot(uid,false);
+  startChatListener(chatId,uid);
 }
 
-// CHAT PRIVADO
-function startChatListener(chatId){
+function startChatListener(chatId,otherUid){
   db.ref("private/"+chatId).off();
   db.ref("private/"+chatId).on("child_added",s=>{
-    showMessage(s.val(),chatId);
-    if(s.val().user!==auth.currentUser.displayName && currentChat!==chatId){
-      unreadMap[chatId]=true;
-      showToast("💬 Nova mensagem de "+s.val().user);
+    const msg=s.val();
+    if(!msg.seenBy) msg.seenBy={};
+    const user=auth.currentUser;
+    if(!user)return;
+    showMessage(msg,chatId);
+    if(msg.uid!==user.uid && !msg.seenBy[user.uid]){
+      db.ref("private/"+chatId+"/"+s.key+"/seenBy/"+user.uid).set(true);
+      showToast("💬 Nova mensagem de "+msg.user);
       msgSound.play();
+      updateNotifyDot(otherUid,true);
     }
   });
 }
 
-// MOSTRAR MENSAGEM
 function showMessage(msg,room){
   if(room!=="chatGlobal" && room!==currentChat)return;
   const div=document.createElement("div");
-  div.className=msg.user===auth.currentUser?.displayName?"msg userMsg":"msg otherMsg";
+  div.className=msg.uid===auth.currentUser?.uid?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
-// TOAST
 function showToast(msg){
   toast.textContent=msg;
   toast.style.display="block";
-  setTimeout(()=>{toast.style.display="none";},3000);
+  setTimeout(()=>toast.style.display="none",3000);
 }
 
-// SCROLL MOBILE
-let scrollInterval;
-function startMobileScroll(){
-  clearInterval(scrollInterval);
-  const container=mobileUserLine;
-  if(!container)return;
-  scrollInterval=setInterval(()=>{
-    container.scrollLeft+=1;
-    if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
-  },20);
+function updateNotifyDot(uid,show){
+  const dots=document.querySelectorAll(".userItemMobile, .userItem");
+  dots.forEach(el=>{
+    if(el.querySelector("img")?.title===uid||el.querySelector("span")?.textContent===uid){
+      const dot=el.querySelector(".notify-dot");
+      if(dot)dot.style.display=show?"block":"none";
+    }
+  });
 }
 </script>
 </body>
